--- a/roles/prometheus/templates/prometheus.service.j2
+++ b/roles/prometheus/templates/prometheus.service.j2
@@ -7,6 +7,7 @@ Restart=on-failure
 User=prometheus
 Group=prometheus
 
+ExecReload=/bin/kill -HUP $MAINPID
 ExecStart={{ prometheus_dir }}/prometheus \
   --config.file={{ prometheus_dir }}/prometheus.yml \
   --enable-feature=agent \
